Update docs to the new configuration macro
This commit reworks the YAML documentation samples to
use the new `[configuration]` macro which generates a
list of samples in multiple config languages instead.

It also fixes a couple of issues which were discovered
as part of doing so.

--- a/src/main/docs/guide/aop/caching.adoc
+++ b/src/main/docs/guide/aop/caching.adoc
@@ -20,10 +20,9 @@ In addition, if the underlying Cache implementation supports non-blocking cache 
 
 == Configuring Caches
 
-By default, https://github.com/ben-manes/caffeine[Caffeine] is used to create caches from application configuration. For example with `application.yml`:
+By default, https://github.com/ben-manes/caffeine[Caffeine] is used to create caches from application configuration. For example:
 
-.Cache Configuration Example
-[source,yaml]
+[configuration,title="Cache Configuration Example"]
 ----
 micronaut:
   caches:
