--- a/src/main/docs/guide/aop/scheduling.adoc
+++ b/src/main/docs/guide/aop/scheduling.adoc
@@ -55,11 +55,10 @@ The above example allows the task execution frequency to be configured with the 
 
 Tasks executed by `@Scheduled` are run by default on a jdk:java.util.concurrent.ScheduledExecutorService[] configured to have twice the number of threads as available processors.
 
-You can configure this thread pool using `application.yml`, for example:
+You can configure this thread pool in your configuration file (e.g `application.yml`):
 
 //TODO: Move YAML snippet to ExecutorServiceConfigSpec
-.Configuring Scheduled Task Thread Pool
-[source,yaml]
+[configuration,title="Configuring Scheduled Task Thread Pool"]
 ----
 micronaut:
   executors:
