--- a/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationAwsParameterStore.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationAwsParameterStore.adoc
@@ -5,7 +5,7 @@ dependency:io.micronaut.aws:micronaut-aws-parameter-store[]
 To enable distributed configuration, create a `src/main/resources/bootstrap.yml` configuration file and add Parameter Store configuration:
 
 .bootstrap.yml
-[source,yaml]
+[configuration]
 ----
 micronaut:
   application:
