--- a/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationSpringCloud.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationSpringCloud.adoc
@@ -1,9 +1,9 @@
 Since 1.1, Micronaut features a native https://spring.io/projects/spring-cloud-config[Spring Cloud Configuration] for those who have not switched to a dedicated more complete solution like Consul.
 
-To enable support for Spring Cloud Configuration, create a `src/main/resources/bootstrap.yml` configuration file and add the following configuration:
+To enable support for Spring Cloud Configuration, create a `src/main/resources/bootstrap.[yml/toml/properties]` configuration file and add the following configuration:
 
 .Integrating with Spring Cloud Configuration
-[source,yaml]
+[configuration]
 ----
 micronaut:
   application:
