--- a/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationVault.adoc
+++ b/src/main/docs/guide/cloud/cloudConfiguration/distributedConfigurationVault.adoc
@@ -1,9 +1,9 @@
 Micronaut integrates with https://www.vaultproject.io/[HashiCorp Vault] as a distributed configuration source.
 
-To enable support for Vault Configuration, create a `src/main/resources/bootstrap.yml` configuration file and add the following configuration:
+To enable support for Vault Configuration, create a `src/main/resources/bootstrap.[yml/toml/properties]` configuration file and add the following configuration:
 
 .Integrating with HashiCorp Vault
-[source,yaml]
+[configuration]
 ----
 micronaut:
   application:
