--- a/src/main/docs/guide/cloud/serviceDiscovery/serviceDiscoveryManual.adoc
+++ b/src/main/docs/guide/cloud/serviceDiscovery/serviceDiscoveryManual.adoc
@@ -3,7 +3,7 @@ If you do not wish to involve a service discovery server like Consul or you inte
 To do this, use the `micronaut.http.services` setting. For example:
 
 .Manually configuring services
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
@@ -23,13 +23,12 @@ TIP: You can override this configuration in production by specifying an environm
 Note that by default no health checking will happen to assert that the referenced services are operational. You can alter that by enabling health checking and optionally specifying a health check path (the default is `/health`):
 
 .Enabling Health Checking
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
     services:
       foo:
-        ...
         health-check: true # <1>
         health-check-interval: 15s # <2>
         health-check-uri: /health # <3>
