--- a/src/main/docs/guide/httpServer/apiVersioning.adoc
+++ b/src/main/docs/guide/httpServer/apiVersioning.adoc
@@ -7,10 +7,10 @@ snippet::io.micronaut.docs.web.router.version.VersionedController[tags="imports,
 <1> The `helloV1` method is declared as version `1`
 <2> The `helloV2` method is declared as version `2`
 
-Then enable versioning by setting `micronaut.router.versioning.enabled` to `true` in `application.yml`:
+Then enable versioning by setting `micronaut.router.versioning.enabled` to `true` in your configuration file (e.g `application.yml`):
 
 .Enabling Versioning
-[source,yaml]
+[configuration]
 ----
 micronaut:
   router:
@@ -21,7 +21,7 @@ micronaut:
 By default Micronaut has two strategies for resolving the version based on an HTTP header named `X-API-VERSION` or a request parameter named `api-version`, however this is configurable. A full configuration example can be seen below:
 
 .Configuring Versioning
-[source,yaml]
+[configuration]
 ----
 micronaut:
   router:
@@ -50,7 +50,7 @@ If this is not enough you can also implement the api:web.router.version.resoluti
 It is possible to supply a default version through configuration.
 
 .Configuring Default Version
-[source,yaml]
+[configuration]
 ----
 micronaut:
   router:
@@ -90,7 +90,7 @@ include::{includedir}configurationProperties/io.micronaut.http.client.intercepto
 For example to use `Accept-Version` as the header name:
 
 .Configuring Client Versioning
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
@@ -105,7 +105,7 @@ micronaut:
 The `default` key refers to the default configuration. You can specify client-specific configuration by using the value passed to `@Client` (typically the service ID). For example:
 
 .Configuring Versioning
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
