--- a/src/main/docs/guide/httpServer/serverConfiguration/threadPools.adoc
+++ b/src/main/docs/guide/httpServer/serverConfiguration/threadPools.adoc
@@ -11,7 +11,7 @@ TIP: The parent event loop can be configured with `micronaut.server.netty.parent
 The server can also be configured to use a different named worker event loop:
 
 .Using a different event loop for the server
-[source,yaml]
+[configuration]
 ----
 micronaut:
   server:
