--- a/src/main/docs/guide/httpServer/websocket/websocketServer.adoc
+++ b/src/main/docs/guide/httpServer/websocket/websocketServer.adoc
@@ -71,7 +71,7 @@ $ mn create-websocket-server MyChat
 By default, Micronaut times out idle connections with no activity after five minutes. Normally this is not a problem as browsers automatically reconnect WebSocket sessions, however you can control this behaviour by setting the `micronaut.server.idle-timeout` setting (a negative value results in no timeout):
 
 .Setting the Connection Timeout for the Server
-[source,yaml]
+[configuration]
 ----
 micronaut:
   server:
@@ -81,7 +81,7 @@ micronaut:
 If you use Micronaut's WebSocket client you may also wish to set the timeout on the client:
 
 .Setting the Connection Timeout for the Client
-[source,yaml]
+[configuration]
 ----
 micronaut:
   http:
