--- a/src/main/docs/guide/management/providedEndpoints/healthEndpoint.adoc
+++ b/src/main/docs/guide/management/providedEndpoints/healthEndpoint.adoc
@@ -7,7 +7,7 @@ To execute the health endpoint, send a GET request to /health. Additionally the 
 To configure the health endpoint, supply configuration through `endpoints.health`.
 
 .Health Endpoint Configuration Example
-[source,yaml]
+[configuration]
 ----
 endpoints:
   health:
@@ -25,7 +25,7 @@ The `details-visible` setting controls whether health detail will be exposed to 
 For example, setting:
 
 .Using `details-visible`
-[source,yaml]
+[configuration]
 ----
 endpoints:
   health:
@@ -50,10 +50,10 @@ The `endpoints.health.status.http-mapping` setting controls which status codes t
 
 |===
 
-You can provide custom mappings in `application.yml`:
+You can provide custom mappings in your configuration file (e.g `application.yml`):
 
 .Custom Health Status Codes
-[source,yaml]
+[configuration]
 ----
 endpoints:
   health:
@@ -90,7 +90,7 @@ All Micronaut provided health indicators are exposed on /health and /health/read
 A health indicator is provided that determines the health of the application based on the amount of free disk space. Configuration for the disk space health indicator can be provided under the `endpoints.health.disk-space` key.
 
 .Disk Space Indicator Configuration Example
-[source,yaml]
+[configuration]
 ----
 endpoints:
   health:
