--- a/src/main/docs/guide/languageSupport/kotlin.adoc
+++ b/src/main/docs/guide/languageSupport/kotlin.adoc
@@ -6,31 +6,7 @@ TIP: The <<cli, Command Line Interface>> for Micronaut includes special support 
 $ mn create-app hello-world --lang kotlin
 ----
 
-Support for Kotlin in Micronaut is built upon the https://kotlinlang.org/docs/reference/kapt.html[Kapt] compiler plugin, which includes support for Java annotation processors. To use Kotlin in your Micronaut application, add the proper dependencies to configure and run kapt on your `kt` source files. Kapt creates Java "stub" classes for your Kotlin classes, which can then be processed by Micronaut's Java annotation processor. The stubs are not included in the final compiled application.
+Since the 4.0 release, Micronaut Framework offers support for Kotlin via https://kotlinlang.org/docs/reference/kapt.html[Kapt] or https://kotlinlang.org/docs/ksp-overview.html[Kotlin Symbol Processing API].
 
-TIP: Learn more about kapt and its features from the https://kotlinlang.org/docs/reference/kapt.html[official documentation.]
 
-The Micronaut annotation processors are declared in the `kapt` scope when using Gradle. For example:
-
-[source,groovy]
-.Example build.gradle
-----
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion" //<1>
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
-    kapt "io.micronaut:micronaut-inject-java" //<2>
-
-    kaptTest "io.micronaut:micronaut-inject-java" //<3>
-    ...
-}
-----
-
-<1> Add the Kotlin standard libraries
-<2> Add the `micronaut-inject-java` dependency under the `kapt` scope, so classes in `src/main` are processed
-<3> Add the `micronaut-inject-java` dependency under the `kaptTest` scope, so classes in `src/test` are processed.
-
-With a `build.gradle` file similar to the above, you can now run your Micronaut application using the `run` task (provided by the Application plugin):
-
-[source,bash]
-$ ./gradlew run
 
