--- a/src/main/docs/guide/appendix/breaks.adoc
+++ b/src/main/docs/guide/appendix/breaks.adoc
@@ -8,10 +8,21 @@ This section documents breaking changes between Micronaut versions
 
 The `micronaut-runtime` module has been split into separate modules depending on the application's use case:
 
-* `micronaut-retry` - The retry implementation including annotations such as ann:retry.annotation.Retryable[] is now a separate module that can be optionally included in a Micronaut application.
-* `micronaut-discovery-core` - The base service discovery features are now a separate module. If you application listens for events such as api:discovery.event.ServiceReadyEvent[] or api:discovery.heartbeat.HeartBeatEvent[] this module should be added to the application classpath.
+===== Micronaut Discovery Core
+
+`micronaut-discovery-core` - The base service discovery features are now a separate module. If you application listens for events such as api:discovery.event.ServiceReadyEvent[] or api:discovery.heartbeat.HeartBeatEvent[] this module should be added to the application classpath.
+
+dependency::micronaut-discovery[]
+
+===== Micronaut Retry
+
+`micronaut-retry` - The retry implementation including annotations such as ann:retry.annotation.Retryable[] is now a separate module that can be optionally included in a Micronaut application.
 
 In addition, since `micronaut-retry` is now optional declarative clients annotated with ann:http.client.annotation.Client[] no longer invoke fallbacks by default. To restore the previous behaviour add `micronaut-retry` to your classpath and annotate any declarative clients with ann:retry.annotation.Recoverable[].
+
+To use the Retry functionality, add the following dependency:
+
+dependency::micronaut-retry[]
 
 ==== Calling `registerSingleton(bean)` no longer overrides existing beans
 
@@ -32,7 +43,7 @@ context.registerBeanDefinition(
 
 ==== WebSocket No Longer Required
 
-The `micronaut-websocket` API is no longer a required dependency of the HTTP server. If you are using annotations such as ann:websocket.annotation.ServerWebSocket[] you should add the `micronaut-websocket` dependency to your application classpath:
+`io.micronaut:micronaut-http-server` no longer exposes `micrnoaut-websocket` transitively. If you are using annotations such as ann:websocket.annotation.ServerWebSocket[], you should add the `micronaut-websocket` dependency to your application classpath:
 
 dependency::micronaut-websocket[]
 
